@@ -38,6 +38,7 @@
 #include "sensor.h"
 #include "identify.h"
 #include "ota.h"
+#include "route.h"
 
 static xbee_err init(struct xbee *xbee, va_list ap);
 static xbee_err mode_shutdown(struct xbee *xbee);
@@ -190,6 +191,8 @@ static const struct xbee_modeConType *conTypes[] = {
 	&xbee_sZB_sensor,
 	&xbee_sZB_identify,
 	&xbee_sZB_ota,
+	&xbee_sZB_createSourceRoute,
+	&xbee_sZB_routeRecordIndicator,
 	NULL
 };
 
