@@ -4,6 +4,7 @@ v3.0.12 - in progress
 	* Fixed logging - no longer records ANSI color escape sequences to non-TTY files
 	* Added more flexibility for logging - colorization, Rx data, and Tx data can be enabled / disabled at startup (via the environment) or at runtime (via function calls)
 	* Fixed addr_save - no longer stores broadcast or 'unknown' addresses on connections that are created with incomplete data
+	* Added 'Create Source Route' and 'Route Record Indicator' support for xbeeZB
 
 v3.0.11 - 3 Dec 2014
 	* Fixed library dependancies (no further requirement for -lpthread -lrt on your application)
